Expand .gitignore with common Go project patterns
The existing .gitignore was minimal (just the binary and ck index). Add
comprehensive patterns for:

- Go build artifacts (*.exe, *.dll, *.so, *.dylib, *.test, *.out)
- Go workspace files (go.work, go.work.sum)
- IDE/editor files (.idea/, .vscode/, vim swap files)
- macOS system files (.DS_Store)
- Debug output from shader debug tool (debug*.png)
- Test coverage and profiling output

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,43 @@
+# Compiled binaries
 soup
-.ck/
 /potentialpreview
+
+# Go build artifacts
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+*.test
+*.out
+
+# Go workspace
+go.work
+go.work.sum
+
+# Code search index
+.ck/
+
+# IDE/Editors
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Debug output
+/tmp/
+debug*.png
+
+# Coverage
+coverage.html
+coverage.out
+
+# Profiling
+*.prof
+*.pprof
